# programmig-contest-challenge-book

./: Cargo.toml  README.md
challenge_book_macros/: Cargo.toml
challenge_book_macros/src/: data_structures.rs  enum_ext.rs  func_attrs.rs  helper.rs  lib.rs  utils.rs
challenge_book_macros/src/data_structures/: enum_for_map.rs
challenge_book_macros/src/enum_ext/: enum_iter.rs  try_from_char.rs
challenge_book_macros/src/func_attrs/: memorize.rs  profile.rs
examples/: enum_for_map_expand.rs  enum_for_map_use.rs  enum_from_char_expand.rs  enum_from_char_use.rs  enum_iter_expand.rs  enum_iter_use.rs  memorize_expand.rs  memorize_use.rs  profile_expand.rs  profile_use.rs
src/: data_structures.rs  enum_ext.rs  error.rs  iterator_ext.rs  lib.rs  reader.rs  utils.rs  vec_ext.rs
src/data_structures/: enum_map.rs
src/enum_ext/: enum_iter.rs
src/iterator_ext/: multi_peakable.rs
src/utils/: cmp.rs  combination.rs  funcs.rs  macros.rs  neighbor.rs  profile.rs
src/vec_ext/: ord_vec_ext.rs  pord_vec_ext.rs  vec_ext.rs
